--- a/css/bestsell.css
+++ b/css/bestsell.css
@@ -1,7 +1,100 @@
-div.bestsell{
+div.bestsell {
     width: 95%;
-    height: 300px;
+    height: 380px;
     overflow: hidden;
-    background-color: brown;
+    margin: 20px auto 0 auto;
+    background-color: white;
+    border: 1px solid lightgray;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+}
+
+div.bestsell>div.bestTop {
+    width: 100%;
+    height: 70px;
+    text-align: center;
     margin: 10px auto;
+    line-height: 70px;
+}
+
+div.bestsell>div.bestTop>h3 {
+    display: inline-block;
+    margin-right: 8%;
+    vertical-align: middle;
+}
+
+div.bestsell>div.bestTop>h3>img {
+    box-sizing: border-box;
+    line-height: 70px;
+    width: 23px;
+    height: 23px;
+    vertical-align: middle;
+
+}
+
+div.bestsell>div.bestTop>p {
+    display: inline-block;
+    float: left;
+    font-size: 12px;
+    margin: auto 15px;
+    vertical-align: middle;
+}
+
+div.bestsell>div.bestTop>p>a {
+    text-decoration: none;
+}
+
+div.bestsell>div.bestBottom {
+    width: 100%;
+    height: 300px;
+    margin-top: 0;
+}
+
+div.bestsell>div.bestBottom>div.swiperBest {
+    width: 100%;
+    height: 100%;
+}
+
+div.bestsell>div.bestBottom>div.swiperBest>div.swiper-wrapper {
+    margin: 0 0 10px 0;
+}
+
+div.bestsell>div.bestBottom>div.swiperBest>div.swiper-wrapper>div.swiper-slide {
+    height: auto;
+}
+
+
+
+div.bestsell>div.bestBottom>div.swiperBest>div.swiper-wrapper>div.swiper-slide>img {
+    width: 86px;
+    height: 86px;
+    margin: 0 20px;
+    object-fit: contain;
+}
+
+div.bestsell>div.bestBottom>div.swiperBest>div.swiper-wrapper>div.swiper-slide>p {
+    font-size: 11px;
+    width: 160px;
+    display: inline-block;
+    text-align: right;
+    height: 90px;
+    line-height: 90px;
+    border-bottom: 1px solid lightgrey;
+}
+
+div.bestsell>div.bestBottom>div.swiperBest>div.swiper-wrapper>div.swiper-slide>p.noBorder {
+    border-bottom: unset;
+}
+
+div.bestsell>div.bestBottom>div.swiperBest>div.swiper-wrapper>div.swiper-slide>h4 {
+    width: 30px;
+    color: var(--myGreen);
+    display: inline-block;
+    text-align: right;
+    height: 90px;
+    line-height: 90px;
+    font-size: larger;
 }
