--- a/css/offer.css
+++ b/css/offer.css
@@ -13,7 +13,7 @@ div.offer>div.offerh3 {
   display: inline-block;
   line-height: 60px;
   background-color: var(--myRed);
-  color: aliceblue;
+  color: white;
   margin: 5px auto;
 }
 
