--- a/css/toppage.css
+++ b/css/toppage.css
@@ -1,7 +1,6 @@
 div.toppage {
     width: 100%;
     height: 60px;
-    margin-bottom: 10px;
 }
 
 div.toppage>img {
@@ -11,10 +10,13 @@ div.toppage>img {
 }
 
 div.search {
-    width: 95%;
-    height: 40px;
-    margin: 0 auto 10px auto;
-    position: relative;
+    width: 100%;
+    height: 60px;
+    position: sticky;
+    top: 0px;
+    z-index: 4;
+    background-color: white;
+    line-height: 45px;
 }
 
 div.search>div.profile {
@@ -22,7 +24,7 @@ div.search>div.profile {
     height: 40px;
     display: inline-block;
     position: absolute;
-    top: 0;
+    top: 60;
     left: 70px;
     text-align: center;
 }
@@ -75,7 +77,7 @@ div.search>div.showProfile>p {
     width: 90%;
     height: 20px;
     border-bottom: 2px solid lightgray;
-    display: inline-block;
+    display: block;
     text-align: right;
     line-height: 5px;
     font-size: 12px;
@@ -83,6 +85,11 @@ div.search>div.showProfile>p {
     margin: 8px 10px;
     cursor: pointer;
 }
+
+/* 
+div.search>div.showProfile>p:hover, div.search>div.showProfile>h6 :hover {
+    background-color: lightgray;
+} */
 
 div.search>div.showProfile>h6 {
     width: 95%;
@@ -139,6 +146,7 @@ div.search>div.basket {
     top: 0;
     left: 30px;
     border-right: 2px solid lightgray;
+    vertical-align: middle;
 }
 
 div.search>div.basket>a {
@@ -157,7 +165,8 @@ div.search>div.digiIcon {
     width: 130px;
     height: 40px;
     display: inline-block;
-    margin: 0 auto;
+    margin: 10px auto;
+    vertical-align: middle;
 
 }
 
@@ -182,8 +191,7 @@ div.search>div.input {
     -moz-border-radius: 10px;
     -ms-border-radius: 10px;
     -o-border-radius: 10px;
-    /* padding: 2px 0; */
-    vertical-align: top;
+    vertical-align: middle;
 }
 
 div.search>div.input>input[type="search"] {
